Modified user location picker, location picker is now in a new style

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -38,7 +38,7 @@
                         </a>
                         <ul class="dropdown-menu shadow-soft">
                             <h5><a class="text-secondary text-truncate font-weight-bold mx-3"
-                                    href="">{{userLocation.place_name}}</a></h5>
+                                    href="" id="userLocation">{{userLocation.place_name}}</a></h5>
                             <li><a class="dropdown-item" type="button" onclick="loadMap()"><i
                                         class="fa fa-location-arrow text-secondary mr-2"></i> Pick another
                                     location</a></li>
