--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,34 +123,6 @@ body {
   box-shadow: 5px 5px 10px #555555;
 }
 
-.shadow-white {
-  box-shadow: 5px 10px 18px #eeeeee;
-}
-
-.shadow-primary {
-  box-shadow: 5px 5px 10px var(--primary);
-}
-
-.shadow-secondary {
-  box-shadow: 5px 5px 10px var(--secondary);
-}
-
-.shadow-success {
-  box-shadow: 5px 5px 10px var(--success);
-}
-
-.shadow-warning {
-  box-shadow: 5px 5px 10px var(--warning);
-}
-
-.shadow-danger {
-  box-shadow: 5px 5px 10px var(--danger);
-}
-
-.shadow-info {
-  box-shadow: 5px 5px 10px var(--info);
-}
-
 .img-container {
   position: relative;
   width: 50%;
@@ -200,38 +172,47 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+#map-wrapper {
+  height: 50vh;
+}
+
 #map {
-  box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.2);
   position: absolute;
-  margin: auto;
-  left: -50vw;
-  right: -50vw;
-  top: -25vw;
-  bottom: -25vw;
-  width: 80vw;
-  height: 70vh;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #instructions {
   position: absolute;
-  margin: 80vh auto 0 auto;
-  width: 80vw;
-  height: 10vh;
-  left: -25vw;
-  right: -25vw;
-  top: 0;
+  left: 0;
   bottom: 0;
+  width: 100%;
+  height: 18%;
   padding: 20px;
   background-color: rgb(255, 255, 255);
   font-family: sans-serif;
   font-size: 0.8em;
+  overflow-y: auto;
   color: #000000;
-  line-height: 2em;
+  z-index: 999999999999999;
 }
 
 #mapTitle {
-  position: relative;
-  margin: 0 auto 80vh auto;
+  position: absolute;
+  top: -15%;
+  left: 0;
+  width: 100%;
+}
+
+#mapConfirmWrapper {
+  position: absolute;
+  bottom: -15%;
+  left: 0;
+  width: 100%;
+  height: fit-content;
+  background-color:  rgb(255, 255, 255);
 }
 
 :root {
