--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -10,7 +10,7 @@
               <li class="dropdown profile_details_drop">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="dropdownMenu3" aria-haspopup="true"
                   aria-expanded="false">
-                  <div class="profile_img">
+                  <div class="accountPic">
                     <img src="{{#if admin.profilePic}}/images/admin/{{admin._id}}.jpg{{else}}/images/admin/admin-logo.png{{/if}}" class="rounded-circle" alt="" />
                   </div>
                 </a>
