Modified error alert and success alert to izitoast style

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -4808,7 +4808,12 @@ button.bg-light:focus {
   background-color: #dae0e5 !important; }
 
 .bg-dark {
-  background-color: #343a40 !important; }
+  background-color: #343a40 !important; 
+}
+
+.bg-slack {
+  background-color: #3aaf85 !important;
+}
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
