--- a/views/partials/error-alert.hbs
+++ b/views/partials/error-alert.hbs
@@ -1,20 +1,23 @@
-<div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0" id="{{#if user}}userAlertBox{{else}}alertBox{{/if}}">
-        <div class="alert {{#if user}}bg-danger text-white{{else}}alert-danger{{/if}} alert-dismissible fade show m-0 mt-5" id="errAlert" role="alert">
-            <strong>!</strong> 
-            {{#if messages.error}}
-            {{messages.error}}
-            {{else}}
-            {{errMessage}}
-            {{/if}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-</div>
+{{#if messages.error}}
+<div id="error" hidden>{{messages.error}}</div>
 <script>
-    setTimeout(() => {
-        $('#errAlert').slideUp();
-    }, 5000);
+    iziToast.show({
+        title: document.getElementById('error').innerHTML,
+        titleColor: '#fff',
+        icon: 'fa fa-check',
+        iconColor: '#fff',
+        class: 'bg-danger',
+    });
 </script>
+{{else}}
+<div id="errMessage" hidden>{{errMessage}}</div>
+<script>
+    iziToast.show({
+        title: document.getElementById('errMessage').innerHTML,
+        titleColor: '#fff',
+        icon: 'fa fa-check',
+        iconColor: '#fff',
+        class: 'bg-danger',
+    });
+</script>
+{{/if}}
