--- a/views/user/view-order.hbs
+++ b/views/user/view-order.hbs
@@ -27,7 +27,7 @@
                             <h4 class="ml-auto text-dark text-medium">Rs.{{order.totalAmount}}</h4>
                         </div>
                         <div class="row px-3 pb-3">
-                            <h4 class="text-dark wthree">Pyment method</h4>
+                            <h4 class="text-dark wthree">Payment method</h4>
                             <h4 class="ml-auto text-dark text-medium">{{order.paymentMethod}}</h4>
                         </div>
                         <div class="row px-3 pb-3">
