--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -5,8 +5,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="MovieMaster | Built for comfortability | Enjoy the show" />
 
   <link rel="icon" type="image/png" href="/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -156,6 +158,7 @@
     });
   </script>
 
+  <script src="/javascripts/app.js"></script>
   <script src="/javascripts/script.js"></script>
   <script src="/javascripts/ajax.js"></script>
 </body>
