Fixed map not loading issue

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -46,6 +46,10 @@
 
   <script src="/assets/js/jquery-1.10.2.min.js"></script>
   <script src="/assets/js/iziToast.js"></script>
+  <script src="/assets/js/vex.combined.js"></script>
+  <script>
+    vex.defaultOptions.className = 'vex-theme-os';
+  </script>
 
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
   <script
@@ -108,7 +112,6 @@
   <script src="/assets/js/owl.carousel.js"></script>
   <script src="/assets/js/owl.config.js"></script>
   <script src="/assets/js/neumorphism.js"></script>
-  <script src="/assets/js/vex.combined.js"></script>
   <script src="/assets/js/jquery.nicescroll.js"></script>
   <script src="/assets/js/scripts.js"></script>
 
