Added option to checkout with wallet

--- a/views/user/book-seat.hbs
+++ b/views/user/book-seat.hbs
@@ -138,6 +138,13 @@
                                                         <span class="fa fa-credit-card text-secondary"> RazorPay</span>
                                                     </a>
                                                 </div>
+                                                <div class="col-12">
+                                                    <a type="button"
+                                                        onclick="checkoutWithWallet(event, '{{0.screen}}', '{{0.show}}')"
+                                                        class="btn btn-warning btn-sm btn-block rounded py-1">
+                                                        <span class="fa fa-credit-card text-secondary"> Use Wallet</span>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
