--- a/views/user/my-orders.hbs
+++ b/views/user/my-orders.hbs
@@ -10,7 +10,7 @@
         </div>
         <div class="row">
             {{#each orders}}
-            <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <a href="/view-order?orderId={{this._id}}">
                     <div class="card bg-primary shadow-soft border-light rounded animate-up-8">
                         <div class="bg-gradient-gray-600 text-white">
@@ -37,7 +37,7 @@
                                             </span>Rs.{{this.totalAmount}}</p>
                                     </div>
                                     <p class="{{#IF this.status '==' 'booked'}}bg-twitter{{else}}bg-danger{{/IF}} text-center text-white text-truncate"><span
-                                            class="font-weight-bold"></span>Razorpay <span
+                                            class="font-weight-bold"></span>{{this.paymentMethod}} <span
                                             class="text-capitalize small">( {{this.status}} )</span></p>
                                 </div>
                             </div>
