--- a/views/theatre/add-shows.hbs
+++ b/views/theatre/add-shows.hbs
@@ -51,7 +51,7 @@
                                                 <label for="date">Date</label>
                                             </div>
                                             <div class="col-md-9">
-                                                <input type="date" name="date" class="form-control" required id="date">
+                                                <input type="date" name="date" class="form-control" required id="showDate" onchange="getTimeSlots()">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -59,7 +59,7 @@
                                                 <label for="showTime">Show Time</label>
                                             </div>
                                             <div class="col-md-9">
-                                                <input type="time" name="showTime" class="form-control" required id="showTime">
+                                                <select class="form-control" id="showTime" name="showTime" required></select>
                                             </div>
                                         </div>
                                         <div class="row">
